--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
- 
+ # Node modules
+node_modules/
+
+# Build files
+dist/
+build/
+
+# Environment variables
+.env
+.env.local
+
+# IDE files
+.idea/
+.vscode/
+
+# OS generated files
+.DS_Store
+Thumbs.db
